--- a/about.html
+++ b/about.html
@@ -1,6 +1,100 @@
 
 <section id="container">
     <div id="content" class="aboutContent">
+        <div class="about-topbg">
+            <div class="about-bg-overlay"></div>
+            <h2>ABOUT</h2>
+        </div>
+        <div class="about-list-wrap">
+            <div class="about-list">
+                <ul>
+                    <li class="on"><a href="#">INTRODUCE</a></li>
+                    <li><a href="#">HISTORY</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="about-info">
+            <div class="intro-wrap row2">
+                <div class="intro">
+                    <div class="intro-txt">
+                        <h3>Lorem, ipsum dolor sit<br> amet consectetur adipisicing elit.</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa veritatis nemo consequuntur cumque id quae aliquam officiis? Deserunt molestiae, nulla ipsa accusamus ad doloremque? Cumque illo ea odio vero corrupti.</p>
+                    </div>
+                    <div class=intro-img><img src="images/about_img01.png" alt=""></div>
+                    <div class="intro-img"><img src="images/about_img02.png" alt=""></div>
+                    <div class="intro-txt">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa veritatis nemo consequuntur cumque id quae aliquam officiis? Deserunt molestiae, nulla ipsa accusamus ad doloremque? Cumque illo ea odio vero corrupti.
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit.Architecto obcaecati itaque error, ut vel optio? Rerum quamillum eligendi qui ullam rem dolores amet, pariatur extenetur voluptatum iure vitae?
+                        </p>
+                    </div>
+                </div>
+            </div>
+    
+            <div class="history-wrap row2">
+               <div class="history">
+                    <ul>
+                        <li>
+                            <strong>2020
+                                <div class="his-txt">
+                                    <p>2020.06.23~2020.12.23</p>
+                                    <p>그린컴퓨터아카데미(강남점)</p>
+                                    <p>웹퍼블리셔&amp;프론트엔트개발자 양성과정 수료</p>
+                                </div>
+                            </strong>   
+                        </li>
+                        <li>
+                            <strong>2019
+                                <div class="his-txt">
+                                    <p>2019.01~2020.02</p>
+                                    <p>모스키노 코리아(정직원)</p>
+                                </div>
+                            </strong>
+                        </li>
+                        <li>
+                            <strong>2018
+                                <div class="his-txt">
+                                    <p>2018.09~2018.12</p>
+                                    <p>삼경무역(계약직)</p>
+                                </div>
+                            </strong>
+                        </li>
+                        <li>
+                            <strong>2017
+                                <div class="his-txt">
+                                    <p>2016.09~2017.08</p>
+                                    <p>중국 상해외대 어학연수</p>
+                                </div>
+                            </strong>
+                        </li>
+                        <li>
+                            <strong>2016
+                                <div class="his-txt">
+                                    <p>2014.06~2016.04</p>
+                                    <p>일본 도쿄어학원 어학연수</p>
+                                </div>
+                            </strong>
+                        </li>
+                        <li>
+                            <strong>2014
+                                <div class="his-txt">
+                                    <p>2011.03~2014.02</p>
+                                    <p>백제예술대학 졸업</p>
+                                    <p>(패션디자인과)</p>
+                                </div>
+                            </strong>
+                        </li>
+                        <li>
+                            <strong>2011
+                                <div class="his-txt">
+                                    <p>2008.03~2011.02</p>
+                                    <p>덕원여자고등학교 졸업</p>
+                                </div>
+                            </strong>
+                        </li>
+                    </ul>
+               </div>
+            </div>
+        </div>
         
     </div>
 </section>
