--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                             <div class="addr-addr">
                                 <div class="addr-txt">
                                     <p>ADDRESS</p>
-                                    <h2>서울특별시 종로구 종로 사직로 1234번지 빌딩 12층</h2>
+                                    <h2>서울 강서구 개화동로5길 3-42</h2>
                                 </div>
                                 <i class="far fa-building"></i>
                             </div>
@@ -147,7 +147,7 @@
                                 <div class="addr-tel">
                                     <div class="addr-txt">
                                         <p>TEL</p>
-                                        <a href="tel:010-1234-5678"><h2>010-1234-5678</h2></a>
+                                        <a href="tel:010-4900-2787"><h2>010-4900-2787</h2></a>
                                     </div>
                                     <i class="fas fa-phone"></i>
                                 </div>
