--- a/about.html
+++ b/about.html
@@ -30,8 +30,8 @@
                 </div>
             </div>
     
-            <div class="history-wrap row2">
-               <div class="history">
+            <div class="history-wrap">
+               <div class="history row2">
                     <ul>
                         <li>
                             <strong>2020
