--- a/board.html
+++ b/board.html
@@ -1,6 +1,9 @@
 
 <section id="container">
     <div id="content" class="boardContent">
-        
+        <div class="board-topbg">
+            <div class="board-bg-overlay"></div>
+            <h2>BOARD</h2>
+        </div>
     </div>
 </section>
