--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,9 @@
 
 <section id="container">
     <div id="content" class="contactContent">
-        
+        <div class="contact-topbg">
+            <div class="contact-bg-overlay"></div>
+            <h2>CONTACT</h2>
+        </div>
     </div>
 </section>
