--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/portfolio.css">
+    <link rel="stylesheet" href="css/skills.css">
+    <link rel="stylesheet" href="css/board.css">
+    <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/join.css">
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="js/slick.min.js"></script>
 </head>
