--- a/join.html
+++ b/join.html
@@ -1,6 +1,9 @@
 
 <section id="container">
     <div id="content" class="joinContent">
-        
+        <div class="join-topbg">
+            <div class="join-bg-overlay"></div>
+            <h2>LOGIN &amp; JOIN</h2>
+        </div>
     </div>
 </section>
