--- a/login.html
+++ b/login.html
@@ -1,6 +1,9 @@
 
 <section id="container">
     <div id="content" class="loginContent">
-        
+        <div class="login-topbg">
+            <div class="login-bg-overlay"></div>
+            <h2>LOGIN &amp; JOIN</h2>
+        </div>
     </div>
 </section>
