--- a/skills.html
+++ b/skills.html
@@ -2,9 +2,9 @@
 <section id="container">
     
     <div id="content" class="skillsContent">
-        <div class="div">
-            <h2>안녕하세요</h2>
-            <p>반갑습니다</p>
+        <div class="skills-topbg">
+            <div class="skills-bg-overlay"></div>
+            <h2>SKILLS</h2>
         </div>
     </div>
 </section>
