--- a/portfolio.html
+++ b/portfolio.html
@@ -17,15 +17,15 @@
                         </a>
                     </div>
                     <div class="pf-txt">
-                        <h2>title : <span>2차 포트폴리오 - BOXED</span></h2>
+                        <h2>TITLE : <span>2차 포트폴리오 - BOXED</span></h2>
                         <div class="color color01">
-                            <div>theme color : </div>
+                            <div>Theme Color : </div>
                             <div></div>
                             <div></div>
                             <div></div>
                         </div>
-                        <p>url : <a href="#">www</a></p>
-                        <p>description : Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque tenetur pariatur exercitationem illo culpa quos voluptates explicabo sed</p>
+                        <p>URL : <a href="https://glass1201.github.io/boxed/.">https://glass1201.github.io/boxed/.</a></p>
+                        <p>Description : Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque tenetur pariatur exercitationem illo culpa quos voluptates explicabo sed</p>
                     </div>
                 </div>
                 <div class="pf-list">
@@ -38,15 +38,15 @@
                         </a>
                     </div>
                     <div class="pf-txt">
-                        <h2>title : <span>모바일 전용 웹페이지 - 다이노탱</spa></h2>
+                        <h2>TITLE : <span>모바일 전용 웹페이지 - 다이노탱</span></h2>
                         <div class="color color02">
-                            <div>theme color : </div>
+                            <div>Theme Color : </div>
                             <div></div>
                             <div></div>
                             <div></div>
                         </div>
-                        <p>url : <a href="#">www</a></p>
-                        <p>description</p>
+                        <p>URL : <a href="#">www</a></p>
+                        <p>Description</p>
                     </div>
                 </div>
                 <div class="pf-list">
@@ -59,15 +59,14 @@
                         </a>
                     </div>
                     <div class="pf-txt">
-                        <h2>title : <span>리액트 웹페이지 - 맥도날드</span></h2>
+                        <h2>Title : <span>리액트 웹페이지 - 맥도날드</span></h2>
                         <div class="color color03">
-                            <div>theme color : </div>
+                            <div>Theme color : </div>
                             <div></div>
                             <div></div>
                         </div>
-                        <p>url : <a href="#">www</a></p>
-                        <p>date</p>
-                        <p>description</p>
+                        <p>URL : <a href="#">www</a></p>
+                        <p>Description</p>
                     </div>
                 </div>
                 <div class="pf-list">
@@ -80,16 +79,15 @@
                         </a>
                     </div>
                     <div class="pf-txt">
-                        <h2>title : <span>반응형 웹페이지 - 웹디즈</span></h2>
+                        <h2>TITLE : <span>반응형 웹페이지 - 웹디즈</span></h2>
                         <div class="color color04">
-                            <div>theme color : </div>
+                            <div>Theme Color : </div>
                             <div></div>
                             <div></div>
                             <div></div>
                         </div>
-                        <p>url : <a href="#">www</a></p>
-                        <p>date</p>
-                        <p>description</p>
+                        <p>URL : <a href="#">www</a></p>
+                        <p>Description</p>
                     </div>
                 </div>
                 <div class="pf-list">
@@ -102,16 +100,15 @@
                         </a>
                     </div>
                     <div class="pf-txt">
-                        <h2>title : <span>1차 포트폴리오</span></h2>
+                        <h2>TITLE : <span>1차 포트폴리오</span></h2>
                         <div class="color color05">
-                            <div>theme color : </div>
+                            <div>Theme Color : </div>
                             <div></div>
                             <div></div>
                             <div></div>
                         </div>
-                        <p>url : <a href="#">www</a></p>
-                        <p>date</p>
-                        <p>description</p>
+                        <p>URL : <a href="#">www</a></p>
+                        <p>Description</p>
                     </div>
                 </div>
 
