--- a/portfolio.html
+++ b/portfolio.html
@@ -6,10 +6,12 @@
             <h2>PORTFOLIO</h2>
         </div>
         <div class="pf-wrap">
+            <p>이미지 및 URL을 클릭하시면 해당 포트폴리오 사이트로 이동합니다.</p>
             <div class="pf-list-section row3">
+                
                 <div class="pf-list">
                     <div class="pf-overlay-wrap">
-                        <a href="#">
+                        <a href="https://glass1201.github.io/boxed/.">
                             <img src="images/portfolio01.PNG" alt="2차포트폴리오">
                             <div class="pf-overlay">
                                 <i class="fas fa-arrow-right"></i>
@@ -25,7 +27,7 @@
                             <div></div>
                         </div>
                         <p>URL : <a href="https://glass1201.github.io/boxed/.">https://glass1201.github.io/boxed/.</a></p>
-                        <p>Description : Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque tenetur pariatur exercitationem illo culpa quos voluptates explicabo sed</p>
+                        <p>Description :<span>2차 포트폴리오입니다.</span></p>
                     </div>
                 </div>
                 <div class="pf-list">
@@ -46,7 +48,7 @@
                             <div></div>
                         </div>
                         <p>URL : <a href="#">www</a></p>
-                        <p>Description</p>
+                        <p>Description :<span>JSON 데이터 파일을 사용한 모바일&amp;태블릿PC 전용 웹사이트를 구현하였습니다.</span></p>
                     </div>
                 </div>
                 <div class="pf-list">
@@ -66,7 +68,7 @@
                             <div></div>
                         </div>
                         <p>URL : <a href="#">www</a></p>
-                        <p>Description</p>
+                        <p>Description :<span>리액트 프로그램을 활용하여 맥도날드 홈페이지를 간단하게 구현하였습니다.</span></p>
                     </div>
                 </div>
                 <div class="pf-list">
@@ -87,7 +89,7 @@
                             <div></div>
                         </div>
                         <p>URL : <a href="#">www</a></p>
-                        <p>Description</p>
+                        <p>Description :<span>Wdiz 사이트를 참고하여 반응형 웹페이지를 구현하였습니다.</span></p>
                     </div>
                 </div>
                 <div class="pf-list">
@@ -108,7 +110,7 @@
                             <div></div>
                         </div>
                         <p>URL : <a href="#">www</a></p>
-                        <p>Description</p>
+                        <p>Description :<span>처음으로 구현한 1차 포트폴리오 입니다.</span></p>
                     </div>
                 </div>
 
