--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="pf-list">
                     <div class="pf-overlay-wrap">
-                        <a href="#">
+                        <a href="https://glass1201.github.io/mobileDT/.">
                             <img src="images/portfolio02.PNG" alt="다이노탱모바일">
                             <div class="pf-overlay">
                                 <i class="fas fa-arrow-right"></i>
@@ -47,7 +47,7 @@
                             <div></div>
                             <div></div>
                         </div>
-                        <p>URL : <a href="#">www</a></p>
+                        <p>URL : <a href="https://glass1201.github.io/mobileDT/.">https://glass1201.github.io/mobileDT/.</a></p>
                         <p>Description :<span>JSON 데이터 파일을 사용한 모바일&amp;태블릿PC 전용 웹사이트를 구현하였습니다.</span></p>
                     </div>
                 </div>
@@ -94,7 +94,7 @@
                 </div>
                 <div class="pf-list">
                     <div class="pf-overlay-wrap">
-                        <a href="#">
+                        <a href="https://glass1201.github.io/portfolio/.">
                             <img src="images/portfolio05.PNG" alt="1차포트폴리오">
                             <div class="pf-overlay">
                                 <i class="fas fa-arrow-right"></i>
@@ -109,7 +109,7 @@
                             <div></div>
                             <div></div>
                         </div>
-                        <p>URL : <a href="#">www</a></p>
+                        <p>URL : <a href="https://glass1201.github.io/portfolio/.">https://glass1201.github.io/portfolio/.</a></p>
                         <p>Description :<span>처음으로 구현한 1차 포트폴리오 입니다.</span></p>
                     </div>
                 </div>
