--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="pf-list">
                     <div class="pf-overlay-wrap">
-                        <a href="#">
+                        <a href="https://glass1201.github.io/wdiz/.">
                             <img src="images/portfolio04.PNG" alt="웹디즈반응형">
                             <div class="pf-overlay">
                                 <i class="fas fa-arrow-right"></i>
@@ -88,7 +88,7 @@
                             <div></div>
                             <div></div>
                         </div>
-                        <p>URL : <a href="#">www</a></p>
+                        <p>URL : <a href="https://glass1201.github.io/wdiz/.">https://glass1201.github.io/wdiz/.</a></p>
                         <p>Description :<span>Wdiz 사이트를 참고하여 반응형 웹페이지를 구현하였습니다.</span></p>
                     </div>
                 </div>
