--- a/contact.html
+++ b/contact.html
@@ -5,5 +5,54 @@
             <div class="contact-bg-overlay"></div>
             <h2>CONTACT</h2>
         </div>
+
+        <div class="contact-wrap row3">
+            <table>
+                <tbody>
+                    <tr>
+                        <td>구분</td>
+                        <td>
+                            <select name="category" id="">
+                                <option value="0">문의</option>
+                            </select>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>성명</td>
+                        <td>
+                            <input type="text" name="name" class="contact-name">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>전화번호</td>
+                        <td>
+                            <input type="text" name="tel" class="contact-tel">
+                            <span>-</span>
+                            <input type="text" name="tel" class="contact-tel">
+                            <span>-</span>
+                            <input type="text" name="tel" class="contact-tel">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>이메일</td>
+                        <td>
+                            <input type="text" name="email" class="contact-email">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>문의내용</td>
+                        <td>
+                            <input type="text" name="query" id="contact-query">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>파일첨부</td>
+                        <td>
+                            <input type="file" name="photo" id="contact-photo">
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </section>
