--- a/about.html
+++ b/about.html
@@ -14,8 +14,8 @@
             </div>
         </div>
         <div class="about-info">
-            <div class="intro-wrap row2">
-                <div class="intro">
+            <div class="intro-wrap">
+                <div class="intro row2">
                     <div class="intro-txt">
                         <h3>Lorem, ipsum dolor sit<br> amet consectetur adipisicing elit.</h3>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa veritatis nemo consequuntur cumque id quae aliquam officiis? Deserunt molestiae, nulla ipsa accusamus ad doloremque? Cumque illo ea odio vero corrupti.</p>
