--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="topNav row">
                     <div class="topNavlogo">
                         <h1><a href="index.html">
-                            BOXED
+                            ONON
                         </a></h1>
                     </div>
                     <div class="navBar">
