--- a/skills.html
+++ b/skills.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boxed</title>
+    <title>ONON-PORTFOLIO</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;600;700;800;900&family=Roboto:wght@300;400;500;900&display=swap" rel="stylesheet">
