--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;600;700;800;900&family=Roboto:wght@300;400;500;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Libre+Barcode+128+Text&display=swap" rel="stylesheet">
+
+
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Michroma&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/reset.css">
@@ -32,7 +39,7 @@
                 <div class="topNav row">
                     <div class="topNavlogo">
                         <h1><a href="index.html">
-                            ONON
+                            ONONON
                         </a></h1>
                     </div>
                     <div class="navBar">
@@ -60,7 +67,8 @@
                     <div class="main-slide-overlay">
                     <video autoplay muted loop src="images/hero.mp4"></video>
                     <div class="video-txt">
-                        <h2>We combine strategy,<br> technology, data science and<br> design to solve the most<br> complex business challenges.</h2>
+                        <p></p>
+                        <p></p>
                     </div>
                     </div>
                 </div>
