--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Libre+Barcode+128+Text&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/reset.css">
@@ -33,7 +34,7 @@
                 <div class="topNav row">
                     <div class="topNavlogo">
                         <h1><a href="index.html">
-                            ONON
+                            ONONON
                         </a></h1>
                     </div>
                     <div class="navBar">
