--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Libre+Barcode+128+Text&display=swap" rel="stylesheet">
-
-
-<link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Michroma&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/slick.css">
@@ -67,6 +64,7 @@
                     <div class="main-slide-overlay">
                     <video autoplay muted loop src="images/hero.mp4"></video>
                     <div class="video-txt">
+                        <p>HELLO <i class="far fa-smile"></i></p>
                         <p></p>
                         <p></p>
                     </div>
