--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
                             <li><a href="portfolio.html">PORTFOLIO</a></li>
                             <li><a href="skills.html">SKILLS</a></li>
                             <li><a href="board.html">BOARD</a></li>
-                            <li><a href="contact.html">CONTACT</a></li>
+                            <li class="on"><a href="contact.html">CONTACT</a></li>
                         </ul>
                     </div>
                     <div class="loginMenu">
