--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
                     <div class="navBar">
                         <ul>
                             <li><a href="about.html">ABOUT</a></li>
-                            <li><a href="portfolio.html">PORTFOLIO</a></li>
+                            <li class="on"><a href="portfolio.html">PORTFOLIO</a></li>
                             <li><a href="skills.html">SKILLS</a></li>
                             <li><a href="board.html">BOARD</a></li>
                             <li><a href="contact.html">CONTACT</a></li>
@@ -110,8 +110,8 @@
                             </div>
                             <div class="pf-list">
                                 <div class="pf-overlay-wrap">
-                                    <a href="#">
-                                        <img src="images/portfolio03.PNG" alt="맥도날드리액트">
+                                    <a href="https://glass1201.github.io/mcdonald/.">
+                                        <img src="images/portfolio03.PNG" alt="맥도날드 리액트">
                                         <div class="pf-overlay">
                                             <i class="fas fa-arrow-right"></i>
                                         </div>
@@ -124,7 +124,7 @@
                                         <div></div>
                                         <div></div>
                                     </div>
-                                    <p>URL : <a href="#">www</a></p>
+                                    <p>URL : <a href="https://glass1201.github.io/mcdonald/.">https://glass1201.github.io/mcdonald/.</a></p>
                                     <p>Description :<span>리액트 프로그램을 활용하여 맥도날드 홈페이지를 간단하게 구현하였습니다.</span></p>
                                 </div>
                             </div>
