--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                     </div>
                     <div class="navBar">
                         <ul>
-                            <li><a href="about.html">ABOUT</a></li>
+                            <li class="on"><a href="about.html">ABOUT</a></li>
                             <li><a href="portfolio.html">PORTFOLIO</a></li>
                             <li><a href="skills.html">SKILLS</a></li>
                             <li><a href="board.html">BOARD</a></li>
