--- a/board.html
+++ b/board.html
@@ -41,7 +41,7 @@
                             <li><a href="about.html">ABOUT</a></li>
                             <li><a href="portfolio.html">PORTFOLIO</a></li>
                             <li><a href="skills.html">SKILLS</a></li>
-                            <li><a href="board.html">BOARD</a></li>
+                            <li class="on"><a href="board.html">BOARD</a></li>
                             <li><a href="contact.html">CONTACT</a></li>
                         </ul>
                     </div>
