--- a/join.html
+++ b/join.html
@@ -49,7 +49,7 @@
                     <div class="loginMenu">
                         <ul>
                             <li><a href="login.html">LOGIN</a></li>
-                            <li><a href="join.html">JOIN</a></li>
+                            <li class="on"><a href="join.html">JOIN</a></li>
                         </ul>
                     </div>
                 </div>
