--- a/login.html
+++ b/login.html
@@ -47,7 +47,7 @@
                     </div>
                     <div class="loginMenu">
                         <ul>
-                            <li><a href="login.html">LOGIN</a></li>
+                            <li class="on"><a href="login.html">LOGIN</a></li>
                             <li><a href="join.html">JOIN</a></li>
                         </ul>
                     </div>
