--- a/skills.html
+++ b/skills.html
@@ -40,7 +40,7 @@
                         <ul>
                             <li><a href="about.html">ABOUT</a></li>
                             <li><a href="portfolio.html">PORTFOLIO</a></li>
-                            <li><a href="skills.html">SKILLS</a></li>
+                            <li class="on"><a href="skills.html">SKILLS</a></li>
                             <li><a href="board.html">BOARD</a></li>
                             <li><a href="contact.html">CONTACT</a></li>
                         </ul>
