--- a/about.html
+++ b/about.html
@@ -74,12 +74,12 @@
                     <div class="intro-wrap">
                         <div class="intro row2">
                             <div class="intro-txt">
-                                <h3>Lorem, ipsum dolor sit<br> amet consectetur adipisicing elit.</h3>
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa veritatis nemo consequuntur cumque id quae aliquam officiis? Deserunt molestiae, nulla ipsa accusamus ad doloremque? Cumque illo ea odio vero corrupti.</p>
+                                <h3 class="typing-txt">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</h3>
+                                <h3 class="typing"></h3>
                             </div>
                             <div class=intro-img><img src="images/about_img01.png" alt=""></div>
                             <div class="intro-img"><img src="images/about_img02.png" alt=""></div>
-                            <div class="intro-txt">
+                            <div class="intro-txt02">
                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa veritatis nemo consequuntur cumque id quae aliquam officiis? Deserunt molestiae, nulla ipsa accusamus ad doloremque? Cumque illo ea odio vero corrupti.
                                 Lorem ipsum, dolor sit amet consectetur adipisicing elit.Architecto obcaecati itaque error, ut vel optio? Rerum quamillum eligendi qui ullam rem dolores amet, pariatur extenetur voluptatum iure vitae?
                                 </p>
