--- a/board.html
+++ b/board.html
@@ -62,12 +62,65 @@
                     <div class="board-bg-overlay"></div>
                     <h2>BOARD</h2>
                 </div>
+                <div class="board-wrap row2">
+                    <div class="board-table row3">
+                        <table>
+                            <caption>게시판</caption>
+                            <colgroup>
+                                <col>
+                                <col>
+                                <col>
+                            </colgroup>
+                            <thead>
+                                <tr>
+                                    <th>번호</th>
+                                    <th>제목</th>
+                                    <th>작성일자</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>4</td>
+                                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit.Lorem ipsum dolor sit amet consectetur adipisicing elit.Lorem ipsum dolor sit amet consectetur adipisicing elit.</td>
+                                    <td>2020-12-08</td>
+                                </tr>
+                                <tr>
+                                    <td>3</td>
+                                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit.</td>
+                                    <td>2020-12-07</td>
+                                </tr>
+                                <tr>
+                                    <td>2</td>
+                                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit.Lorem ipsum dolor sit amet consectetur adipisicing elit.Lorem ipsum dolor sit amet consectetur adipisicing elit.Lorem ipsum dolor sit amet consectetur adipisicing elit.</td>
+                                    <td>2020-12-06</td>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit.</td>
+                                    <td>2020-12-05</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <div class="write">
+                            <button type="submit">글쓰기</button>
+                        </div>
+                        <div class="board-num">
+                            <span><i class="fas fa-chevron-left"></i></span>
+                            <a href="#" class='on'>1</a>
+                            <a href="#">2</a>
+                            <a href="#">3</a>
+                            <a href="#">4</a>
+                            <a href="#">5</a>
+                            <span><i class="fas fa-chevron-right"></i></span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
         <footer id="footer">
             <div class="footer-info">
-                <p>&copy;All Rights Reserved by <span>design yami</spa></p>
+                <p>&copy;All Rights Reserved by <span>design yami</span></p>
             </div>
         </footer>
     </div>
