--- a/contact.html
+++ b/contact.html
@@ -125,7 +125,7 @@
 
         <footer id="footer">
             <div class="footer-info">
-                <p>&copy;All Rights Reserved by <span>design yami</spa></p>
+                <p>&copy;All Rights Reserved by <span>design yami</span></p>
             </div>
         </footer>
     </div>
