--- a/skills.html
+++ b/skills.html
@@ -107,11 +107,11 @@
     <script>
         // 차트
         $(window).ready(function(){
-            draw(90, '.pie-chart1', '#999');
-            draw(80, '.pie-chart2', '#777');
-            draw(60, '.pie-chart3', '#555');
-            draw(50, '.pie-chart4', '#333');
-            draw(40, '.pie-chart5', '#000');
+            draw(90, '.pie-chart1', '#32b67a');
+            draw(80, '.pie-chart2', '#299162');
+            draw(60, '.pie-chart3', '#20734d');
+            draw(50, '.pie-chart4', '#154d33');
+            draw(40, '.pie-chart5', '#0c2b1d');
         });
     
         function draw(max, classname, colorname){
