--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
                             
                             <div class="pf-list">
                                 <div class="pf-overlay-wrap">
-                                    <a href="https://glass1201.github.io/boxed/.">
+                                    <a href="https://glass1201.github.io/boxed/." target="_blank">
                                         <img src="images/portfolio01.PNG" alt="2차포트폴리오">
                                         <div class="pf-overlay">
                                             <i class="fas fa-arrow-right"></i>
@@ -83,13 +83,13 @@
                                         <div></div>
                                         <div></div>
                                     </div>
-                                    <p>URL : <a href="https://glass1201.github.io/boxed/.">https://glass1201.github.io/boxed/.</a></p>
+                                    <p>URL : <a href="https://glass1201.github.io/boxed/."  target="_blank">https://glass1201.github.io/boxed/.</a></p>
                                     <p>Description :<span>2차로 제작한 레쥬메 사이트입니다.</span></p>
                                 </div>
                             </div>
                             <div class="pf-list">
                                 <div class="pf-overlay-wrap">
-                                    <a href="https://glass1201.github.io/mobileDT/.">
+                                    <a href="https://glass1201.github.io/mobileDT/." target="_blank">
                                         <img src="images/portfolio02.PNG" alt="다이노탱모바일">
                                         <div class="pf-overlay">
                                             <i class="fas fa-arrow-right"></i>
@@ -104,13 +104,13 @@
                                         <div></div>
                                         <div></div>
                                     </div>
-                                    <p>URL : <a href="https://glass1201.github.io/mobileDT/.">https://glass1201.github.io/mobileDT/.</a></p>
+                                    <p>URL : <a href="https://glass1201.github.io/mobileDT/." target="_blank">https://glass1201.github.io/mobileDT/.</a></p>
                                     <p>Description :<span>JSON 데이터 파일을 사용한 모바일&amp;태블릿PC 전용 웹사이트를 구현하였습니다.</span></p>
                                 </div>
                             </div>
                             <div class="pf-list">
                                 <div class="pf-overlay-wrap">
-                                    <a href="https://glass1201.github.io/mcdonald/.">
+                                    <a href="https://glass1201.github.io/mcdonald/." target="_blank">
                                         <img src="images/portfolio03.PNG" alt="맥도날드 리액트">
                                         <div class="pf-overlay">
                                             <i class="fas fa-arrow-right"></i>
@@ -124,13 +124,13 @@
                                         <div></div>
                                         <div></div>
                                     </div>
-                                    <p>URL : <a href="https://glass1201.github.io/mcdonald/.">https://glass1201.github.io/mcdonald/.</a></p>
+                                    <p>URL : <a href="https://glass1201.github.io/mcdonald/." target="_blank">https://glass1201.github.io/mcdonald/.</a></p>
                                     <p>Description :<span>리액트 프로그램을 활용하여 맥도날드 홈페이지를 간단하게 구현하였습니다.</span></p>
                                 </div>
                             </div>
                             <div class="pf-list">
                                 <div class="pf-overlay-wrap">
-                                    <a href="https://glass1201.github.io/wdiz/.">
+                                    <a href="https://glass1201.github.io/wdiz/." target="_blank">
                                         <img src="images/portfolio04.PNG" alt="웹디즈반응형">
                                         <div class="pf-overlay">
                                             <i class="fas fa-arrow-right"></i>
@@ -145,7 +145,7 @@
                                         <div></div>
                                         <div></div>
                                     </div>
-                                    <p>URL : <a href="https://glass1201.github.io/wdiz/.">https://glass1201.github.io/wdiz/.</a></p>
+                                    <p>URL : <a href="https://glass1201.github.io/wdiz/." target="_blank">https://glass1201.github.io/wdiz/.</a></p>
                                     <p>Description :<span>Wdiz 사이트를 참고하여 반응형 웹페이지를 구현하였습니다.</span></p>
                                 </div>
                             </div>
@@ -156,9 +156,6 @@
         </section>
 
         <footer id="footer">
-            <div class="footer-info">
-                <p>&copy;All Rights Reserved by <span>design yami</span></p>
-            </div>
         </footer>
     </div>
 
