--- a/about.html
+++ b/about.html
@@ -29,32 +29,7 @@
 </head>
 <body>
     <div id="wrap">
-        <header id="header">
-            <div class="topNavWrap">
-                <div class="topNav row">
-                    <div class="topNavlogo">
-                        <h1><a href="index.html">
-                            ONONON
-                        </a></h1>
-                    </div>
-                    <div class="navBar">
-                        <ul>
-                            <li class="on"><a href="about.html">ABOUT</a></li>
-                            <li><a href="portfolio.html">PORTFOLIO</a></li>
-                            <li><a href="skills.html">SKILLS</a></li>
-                            <li><a href="board.html">BOARD</a></li>
-                            <li><a href="contact.html">CONTACT</a></li>
-                        </ul>
-                    </div>
-                    <div class="loginMenu">
-                        <ul>
-                            <li><a href="login.html">LOGIN</a></li>
-                            <li><a href="join.html">JOIN</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </header>
+        <header id="header"></header>
         
         <section id="container">
             <div id="content" class="aboutContent">
@@ -160,9 +135,6 @@
         </section>
 
         <footer id="footer">
-            <div class="footer-info">
-                <p>&copy;All Rights Reserved by <span>design yami</span></p>
-            </div>
         </footer>
     </div>
 
