--- a/about.html
+++ b/about.html
@@ -5,25 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ONON-PORTFOLIO</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;600;700;800;900&family=Roboto:wght@300;400;500;900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Libre+Barcode+128+Text&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/slick.css">
-    <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/about.css">
-    <link rel="stylesheet" href="css/portfolio.css">
-    <link rel="stylesheet" href="css/skills.css">
-    <link rel="stylesheet" href="css/board.css">
-    <link rel="stylesheet" href="css/contact.css">
-    <link rel="stylesheet" href="css/login.css">
-    <link rel="stylesheet" href="css/join.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="js/slick.min.js"></script>
 </head>
@@ -49,18 +31,18 @@
                     <div class="intro-wrap">
                         <div class="intro row2">
                             <div class="intro-txt">
-                                <h3 class="typing-txt">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
+                                <h3 class="typing-txt">안녕하십니까, 신입 웹퍼블리셔 온유리입니다.</h3>
                                 <h3 class="typing">
                                     <span></span>
                                     <p>&nbsp;</p>
                                 </h3>
                             </div>
-                            <div class=intro-img><img src="images/about_img01.png" alt=""></div>
-                            <div class="intro-img"><img src="images/about_img02.png" alt=""></div>
+                            <div class=intro-img><img src="images/about_me01.jpeg" alt=""></div>
+                            <div class="intro-img"><img src="images/about_me02.jpeg" alt=""></div>
                             <div class="intro-txt02">
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa veritatis nemo consequuntur cumque id quae aliquam officiis? Deserunt molestiae, nulla ipsa accusamus ad doloremque? Cumque illo ea odio vero corrupti.
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit.Architecto obcaecati itaque error, ut vel optio? Rerum quamillum eligendi qui ullam rem dolores amet, pariatur extenetur voluptatum iure vitae?
-                                </p>
+                                <p>NAME : 온유리</p>
+                                <p>BIRTH : 1992.12.01</p>
+                                <p></p>
                             </div>
                         </div>
                     </div>
@@ -160,7 +142,7 @@
     typingTxt = typingTxt.split('');
     if (typingBool == false){
         typingBool=true;
-        var tyInt = setInterval(typing,100);
+        var tyInt = setInterval(typing,150);
     }
 
     function typing(){
